objects/Attachments__c/Attachments__c.object-meta.xml
<CustomObject>
    <label>Attachments</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Attachments Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>