objects/Attachments__c/fields/ContentType__c.field-meta.xml
<CustomField>
    <fullName>ContentType__c</fullName>
    <label>ContentType</label>
    <length>16</length>
    <type>Text</type>
</CustomField>