objects/Attachments__c/fields/DocumentURL__c.field-meta.xml
<CustomField>
    <fullName>DocumentURL__c</fullName>
    <label>DocumentURL</label>
    <type>Url</type>
</CustomField>