objects/Attachments__c/fields/IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>IsPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPrivate</label>
    <type>Checkbox</type>
</CustomField>